<resources>
    <string name="app_name">calculatorapp</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="decimal">.</string>
    <string name="backspace">↩</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="addition">+</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="subtraction">–</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="equal">=</string>
    <string name="initial_val">0</string>
    <string name="negative_sign">-</string>
    <string name="percent">%</string>
    <string name="power">^</string>
    <string name="clear">️C</string>
    <string name="nan">Undefined</string>


</resources>